[Server] thêm shopcode va usercode
